--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "jest": "^25.1.0",
     "jest-image-snapshot": "^2.12.0",
+    "node-extend": "^0.2.0",
     "puppeteer": "^2.1.1",
     "puppeteer-core": "^2.1.1"
   }
